WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78635
[UNIX] Plugin information fields are not interpreted as UTF-8
https://bugs.webkit.org/show_bug.cgi?id=78635
Summary
[UNIX] Plugin information fields are not interpreted as UTF-8
Diego Escalante Urrelo
Reported
2012-02-14 14:38:52 PST
Concrete test case: totem plugin for DiVX is named: DivX® Web Player But WebKitGTK+ reads it like this: DivX® Web Player The original string in totem source is: browser-plugin/totemPlugin.cpp: =8<======= static const char kPluginDescription[] = #elif defined(TOTEM_MULLY_PLUGIN) "DivX\xC2\xAE Web Player"; =8<======= The value is handled to WebKitGTK+ by the GetValue implementation here: browser-plugin/totemPluginGlue.cpp: =8<======= static NPError totem_plugin_get_value (NPP instance, NPPVariable variable, void *value) case NPPVpluginNameString: *((char **)value) = totemPlugin::PluginDescription (); break; =8<=======
Attachments
Patch
(10.34 KB, patch)
2012-02-17 20:38 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2012-02-17 20:31:09 PST
This appears to be a problem with all Unixy-non-Chromium ports.
Martin Robinson
Comment 2
2012-02-17 20:38:52 PST
Created
attachment 127690
[details]
Patch
Gustavo Noronha (kov)
Comment 3
2012-02-20 17:56:27 PST
Comment on
attachment 127690
[details]
Patch Makes sense. Diego will be happy!
WebKit Review Bot
Comment 4
2012-02-20 18:19:21 PST
Comment on
attachment 127690
[details]
Patch Clearing flags on attachment: 127690 Committed
r108281
: <
http://trac.webkit.org/changeset/108281
>
WebKit Review Bot
Comment 5
2012-02-20 18:19:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug